exports[`(.not).toHavePreconditionRequiredStatus > using axios > .not.toHavePreconditionRequiredStatus > fails when response have status code 428 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHavePreconditionRequiredStatus()</intensity>

Expected status code to not be 428 received:
  <red>428</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 428,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHavePreconditionRequiredStatus > using axios > .toHavePreconditionRequiredStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHavePreconditionRequiredStatus()</intensity>

Expected status code to be 428 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHavePreconditionRequiredStatus > using got > .not.toHavePreconditionRequiredStatus > fails when response have status code 428 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHavePreconditionRequiredStatus()</intensity>

Expected status code to not be 428 received:
  <red>428</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 428,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;

exports[`(.not).toHavePreconditionRequiredStatus > using got > .toHavePreconditionRequiredStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHavePreconditionRequiredStatus()</intensity>

Expected status code to be 428 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;
